--- a/MVC_MultitecUA/Views/Evento/VistaUsuario/FiltroAvanzado.cshtml
+++ b/MVC_MultitecUA/Views/Evento/VistaUsuario/FiltroAvanzado.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Filtrar Eventos por categoría y/o fecha</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "TodosEventos")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <div>
     @using (Html.BeginForm("Filtrar", "Evento"))
