--- a/MVC_MultitecUA/Views/Recuerdo/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.RecuerdoEN
 
 @{
-    ViewBag.Title = "Borrar";
+    ViewBag.Title = "Borrar recuerdo";
 }
 
 <h2>Borrar el Recuerdo: @ViewData["recuerdo"]</h2>
@@ -10,7 +10,7 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Recuerdos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-<h3>¿Estás seguro de que deseas borrar esto?</h3>
+<h3>¿Estás seguro de que deseas borrar este recuerdo?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
