--- a/MVC_MultitecUA/Views/Recuerdo/Details.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Details.cshtml
@@ -68,6 +68,17 @@
         <dd>
             @Html.DisplayFor(model => model.NombreEvento)
         </dd>
+        <dt>
+            Fotos
+        </dt>
+        <dd>
+            @{
+                foreach (string foto in (System.Collections.IList)ViewData["listaFotos"])
+                {
+                    <img src="@foto" alt="Foto del evento" style="max-width:25%;">
+                }
+            }
+        </dd>
 
     </dl>
 </div>
