--- a/MVC_MultitecUA/Views/Recuerdo/VistaUsuario/Recuerdos.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/VistaUsuario/Recuerdos.cshtml
@@ -6,23 +6,35 @@
 
 <h2>Recuerdos del evento: @ViewData["nombreEvento"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label><a href="../Evento/TodosEventos">Eventos</a></label><span> >> </span><label><a href="../Evento/Detalles/@ViewData["idevento"]">Evento: @ViewData["nombreEvento"]</a></label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label><a href="../Evento/TodosEventos">Eventos</a></label><span> >> </span><label><a href="../Evento/Detalles/@ViewData["idevento"]">Detalles del evento</a></label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
 
 <p>
-    @Html.ActionLink("Crear recuerdo", "Create",new { idEvento = ViewData["idevento"]})
+    @Html.ActionLink("Crear recuerdo", "Create", new { idEvento = ViewData["idevento"] })
 </p>
+
+@{
+    if (TempData["mal"] != null)
+    {
+        <p class="text-danger"><span class="glyphicon glyphicon-remove"></span> @TempData["mal"] </p>
+        TempData.Remove("mal");
+    }
+    else
+    if (TempData["bien"] != null)
+    {
+        <p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </p>
+        TempData.Remove("bien");
+    }
+}
+
 <table class="table">
     <tr>
-        <th>
+        <th style="width: 20em;">
             @Html.DisplayNameFor(model => model.Titulo)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Cuerpo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdEvento)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NombreEvento)
@@ -30,26 +42,23 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Titulo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cuerpo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdEvento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NombreEvento)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td style="width: 20em;">
+                <a href="./Details/@Html.DisplayFor(modelItem => item.Id)" style="text-decoration: none;">@Html.DisplayFor(modelItem => item.Titulo)</a>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cuerpo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NombreEvento)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
