--- a/MVC_MultitecUA/Views/Servicio/Create.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Create.cshtml
@@ -10,7 +10,7 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create","Servicio", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -37,6 +37,12 @@
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.Estado, new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="file">Foto: </label>
+        <div class="col-md-10">
+            <input class=" text-box single-line" id="file" name="file" type="file" value="" />
         </div>
     </div>
 
