--- a/MVC_MultitecUA/Views/Servicio/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Edit.cshtml
@@ -10,7 +10,7 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit","Servicio", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -39,6 +39,12 @@
         <div class="col-md-10">
             @Html.DropDownListFor(n => n.Estado, new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="file">Foto (si no se indica, se borrará la foto que hubiese anteriormente): </label>
+        <div class="col-md-10">
+            <input class=" text-box single-line" id="file" name="file" type="file" value="" />
         </div>
     </div>
 
