--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -1,13 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../fontello/css/fontello.css">
-    <title>@ViewBag.Title - MultitecUA</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="../fontello/css/fontello.css">
+	<title>@ViewBag.Title - MultitecUA</title>
+	@Styles.Render("~/Content/css")
+	@Scripts.Render("~/bundles/modernizr")
+	@using MultitecUAGenNHibernate.CEN.MultitecUA;
+	@using MultitecUAGenNHibernate.EN.MultitecUA;
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -53,74 +55,91 @@
                         }
                     }
                 </ul>
-                @{if (Session["usuario"] != null)
-                    {
-                        <ul class="nav navbar-nav navbar-right">
-                            @{ if (Session["modoAdmin"].ToString() == "true")
-                                {
+                @{
+					if (Session["usuario"] != null)
+					{
+						<ul class="nav navbar-nav navbar-right">
+						@{ 
+							if (Session["modoAdmin"].ToString() == "true")
+							{
 
-                                    <li class="dropdown">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                            Administrar
-                                            <span class="caret"></span>
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
-                                            <li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
-                                            <li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
-                                            <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
-                                            <li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
-                                            <li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
-                                            <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
-                                            <li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
-                                            <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
-                                            <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
-                                        </ul>
-                                    </li>
-                                }
-                            }
+								<li class="dropdown">
+									<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+										Administrar
+										<span class="caret"></span>
+									</a>
+									<ul class="dropdown-menu">
+										<li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
+										<li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
+										<li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
+										<li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
+										<li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
+										<li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
+										<li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
+										<li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
+										<li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
+										<li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
+									</ul>
+								</li>
+							}
+						}
 
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    @Session["usuario"]
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    @{if (Session["modoAdmin"].ToString() == "false")
-                                        {
-                                            <li>
-                                                @Html.ActionLink("Modificar perfil", "Modificar", "Usuario")
-                                            </li>
-                                        }
-                                    }
-                                    @{ if (Session["esAdmin"].ToString() == "true")
-                                        {
-                                            if (Session["modoAdmin"].ToString() == "false")
-                                            {
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+								@Session["usuario"]
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu">
+								@{if (Session["modoAdmin"].ToString() == "false")
+									{
+										<li>
+											@Html.ActionLink("Modificar perfil", "Modificar", "Usuario")
+										</li>
+									}
+								}
+								@{ if (Session["esAdmin"].ToString() == "true")
+									{
+										if (Session["modoAdmin"].ToString() == "false")
+										{
 
-                                                <li>
-                                                    @Html.ActionLink("Entrar al modo Administrador", "Adminin", "Sesion")
-                                                </li>
-                                            }
-                                            else
-                                            {
-                                                <li>
-                                                    @Html.ActionLink("Salir del modo Administrador", "Adminout", "Sesion")
-                                                </li>
-                                            }
-                                        }
-                                    }
-                                    <li>
-                                        @Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    }
+											<li>
+												@Html.ActionLink("Entrar al modo Administrador", "Adminin", "Sesion")
+											</li>
+										}
+										else
+										{
+											<li>
+												@Html.ActionLink("Salir del modo Administrador", "Adminout", "Sesion")
+											</li>
+										}
+									}
+								}
+								<li>
+									@Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
+								</li>
+							</ul>
+						</li>
+						@{
+							int numeroNotificaciones = 0;
+							NotificacionUsuarioCEN notificacionUsuarioCEN = new NotificacionUsuarioCEN();
+							UsuarioCEN usuarioCEN = new UsuarioCEN();
+
+							int OIDusuario = usuarioCEN.ReadNick(Session["usuario"].ToString()).Id;
+
+							IList<NotificacionUsuarioEN> notificaciones = notificacionUsuarioCEN.DameNotificacionesNoLeidasPorUsuario(OIDusuario);
+
+							numeroNotificaciones = notificaciones.Count;
+						
+							<li><a href="/NotificacionUsuario/NoLeidas"><span class="glyphicon glyphicon-bell" style="color: #999; font-size:1.15em;"></span> @numeroNotificaciones</a></li>
+	
+						}
+						</ul>
+					}
 
                 }
-                @{if (Session["usuario"] == null)
-                    {
+                @{
+					if (Session["usuario"] == null)
+					{
                         <ul class="nav navbar-nav navbar-right">
                             <li>
                                 @Html.ActionLink("Iniciar Sesión", "Login", "Sesion")
