--- a/MVC_MultitecUA/Views/Usuario/VistaUsuario/Modificar.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/VistaUsuario/Modificar.cshtml
@@ -7,6 +7,9 @@
 
 
 <h2>Editar Usuario: @Model.Nick</h2>
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Lista de Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 @if (ViewData.ContainsKey("error"))
 {
     <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["error"]</p>
