--- a/MVC_MultitecUA/Views/Mensaje/FiltroAutorReceptor.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/FiltroAutorReceptor.cshtml
@@ -128,9 +128,9 @@
 		@{
 			if (siguiente > 1)
 			{
-				<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+				<label>@Html.ActionLink("Primera", "FiltroAutorReceptor", new { pag = 0 })</label>
 				<span>|</span>
-				<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+				<label>@Html.ActionLink("Anterior", "FiltroAutorReceptor", new { pag = anterior })</label>
 			}
 			else
 			{
@@ -147,9 +147,9 @@
 		@{
 			if (siguiente < numPags)
 			{
-				<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+				<label>@Html.ActionLink("Siguiente", "FiltroAutorReceptor", new { pag = siguiente })</label>
 				<span>|</span>
-				<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+				<label>@Html.ActionLink("Última", "FiltroAutorReceptor", new { pag = numPags - 1 })</label>
 			}
 			else
 			{
