--- a/MVC_MultitecUA/Views/Mensaje/VistaUsuario/DetalleMensajeEnviado.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/VistaUsuario/DetalleMensajeEnviado.cshtml
@@ -5,12 +5,27 @@
 }
 
 <h2>Detalles de Mensaje</h2>
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mis mensajes", "MisMensajes")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 @{
 	if (TempData["bien"] != null)
 	{
 		<p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </p>
 		TempData.Remove("bien");
+	}
+	else
+	if (TempData["bien2"] != null)
+	{
+		<p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien2"] </p>
+		TempData.Remove("bien2");
+	}
+	else
+	if (TempData["regular2"] != null)
+	{
+		<p class="text-warning"><span class="glyphicon glyphicon-check"></span> @TempData["regular2"] </p>
+		TempData.Remove("regular2");
 	}
 }
 
@@ -56,5 +71,8 @@
 	</dl>
 </div>
 <p>
+	@Html.ActionLink("Enviar a activos", "cambioBandejaAutor", new { id = Model.Id, cambioBandejaAutor = "Activo" }, new { @class = "btn btn-default" })
+	@Html.ActionLink("Enviar a archivados", "cambioBandejaAutor", new { id = Model.Id, cambioBandejaAutor = "Archivado" }, new { @class = "btn btn-default" })
+	@Html.ActionLink("Enviar a borrados", "cambioBandejaAutor", new { id = Model.Id, cambioBandejaAutor = "Borrado" }, new { @class = "btn btn-default" })
 	@Html.ActionLink("Volver a mis mensajes", "MisMensajes", null, new { @class = "btn btn-default" })
 </p>
