--- a/MVC_MultitecUA/Views/Mensaje/VistaUsuario/DetalleMensajeRecibido.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/VistaUsuario/DetalleMensajeRecibido.cshtml
@@ -5,12 +5,27 @@
 }
 
 <h2>Detalles de Mensaje</h2>
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mis mensajes", "MisMensajes")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
+
 
 @{
 	if (TempData["bien"] != null)
 	{
 		<p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </p>
 		TempData.Remove("bien");
+	}
+	else if (TempData["bien2"] != null)
+	{
+		<p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien2"] </p>
+		TempData.Remove("bien2");
+	}
+	else
+	if (TempData["regular2"] != null)
+	{
+		<p class="text-warning"><span class="glyphicon glyphicon-check"></span> @TempData["regular2"] </p>
+		TempData.Remove("regular2");
 	}
 }
 
@@ -64,6 +79,9 @@
 </div>
 <p>
 	@Html.ActionLink("Responder mensaje", "Crear", "Mensaje", new { id = Model.AutorId }, new { @class = "btn btn-default" })
-	@Html.ActionLink("Volver a mis mensajes", "MisMensajes",null, new { @class = "btn btn-default" })
 	@Html.ActionLink("Marcar como no leído", "CambioEstado", new { id = Model.Id, cambioEstado = "NoLeido" }, new { @class = "btn btn-default" })
+	@Html.ActionLink("Enviar a activos", "CambioBandejaReceptor", new { id = Model.Id, cambioBandejaReceptor = "Activo" }, new { @class = "btn btn-default" })
+	@Html.ActionLink("Enviar a archivados", "CambioBandejaReceptor", new { id = Model.Id, cambioBandejaReceptor = "Archivado" }, new { @class = "btn btn-default" })
+	@Html.ActionLink("Enviar a borrados", "CambioBandejaReceptor", new { id = Model.Id, cambioBandejaReceptor = "Borrado" }, new { @class = "btn btn-default" })
+	@Html.ActionLink("Volver a mis mensajes", "MisMensajes", null, new { @class = "btn btn-default" })
 </p>
