--- a/MVC_MultitecUA/Views/Mensaje/VistaUsuario/MisMensajesEnviados.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/VistaUsuario/MisMensajesEnviados.cshtml
@@ -1,11 +1,13 @@
 ﻿@model IEnumerable<MVC_MultitecUA.Models.MensajeModel>
 
 @{
-	ViewBag.Title = "Mis mensajes";
+	ViewBag.Title = "Mis mensajes filtrados";
 }
 
-<h2>Mis mensajes</h2>
-
+<h2>Mis mensajes filtrados</h2>
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mis mensajes", "MisMensajes")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
 	<h3>Filtros:</h3>
 
@@ -25,6 +27,19 @@
 		</div>
 	}
 </p>
+@{
+	if (TempData["mal2"] != null)
+	{
+		<p class="text-danger"><span class="glyphicon glyphicon-remove"></span> @TempData["mal2"] </p>
+		TempData.Remove("mal2");
+	}
+	else
+	if (TempData["bien2"] != null)
+	{
+		<p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien2"] </p>
+		TempData.Remove("bien2");
+	}
+}
 @{
 	if (TempData["mal"] != null)
 	{
@@ -53,23 +68,23 @@
 
 			@foreach (var item in Model)
 			{
-			<tr>
-				<td>
-					@Html.ActionLink(item.NickReceptor, "Detalles", "Usuario", new { nick = item.NickReceptor }, null)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.Titulo)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.BandejaAutor)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.Fecha)
-				</td>
-				<td>
-					@Html.ActionLink("Detalles", "DetalleMensajeEnviado", new { id = item.Id })
-				</td>
-			</tr>
+				<tr>
+					<td>
+						@Html.ActionLink(item.NickReceptor, "Detalles", "Usuario", new { nick = item.NickReceptor }, null)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Titulo)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.BandejaAutor)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Fecha)
+					</td>
+					<td>
+						@Html.ActionLink("Detalles", "DetalleMensajeEnviado", new { id = item.Id })
+					</td>
+				</tr>
 			}
 
 		</table>
@@ -87,9 +102,9 @@
 
 			if (siguiente > 1)
 			{
-				<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+				<label>@Html.ActionLink("Primera", "FiltroUsuario", new { pag = 0 })</label>
 				<span>|</span>
-				<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+				<label>@Html.ActionLink("Anterior", "FiltroUsuario", new { pag = anterior })</label>
 			}
 			else
 			{
@@ -106,9 +121,9 @@
 
 			if (siguiente < numPags)
 			{
-				<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+				<label>@Html.ActionLink("Siguiente", "FiltroUsuario", new { pag = siguiente })</label>
 				<span>|</span>
-				<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+				<label>@Html.ActionLink("Última", "FiltroUsuario", new { pag = numPags - 1 })</label>
 			}
 			else
 			{
