--- a/MVC_MultitecUA/Views/Mensaje/VistaUsuario/MisMensajesRecibidos.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/VistaUsuario/MisMensajesRecibidos.cshtml
@@ -1,11 +1,13 @@
 ﻿@model IEnumerable<MVC_MultitecUA.Models.MensajeModel>
 
 @{
-	ViewBag.Title = "Mis mensajes";
+	ViewBag.Title = "Mis mensajes filtrados";
 }
 
-<h2>Mis mensajes</h2>
-
+<h2>Mis mensajes filtrados</h2>
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mis mensajes", "MisMensajes")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
 	<h3>Filtros:</h3>
 
@@ -93,9 +95,9 @@
 
 			if (siguiente > 1)
 			{
-				<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+				<label>@Html.ActionLink("Primera", "FiltroUsuario", new { pag = 0 })</label>
 				<span>|</span>
-				<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+				<label>@Html.ActionLink("Anterior", "FiltroUsuario", new { pag = anterior })</label>
 			}
 			else
 			{
@@ -112,9 +114,9 @@
 
 			if (siguiente < numPags)
 			{
-				<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+				<label>@Html.ActionLink("Siguiente", "FiltroUsuario", new { pag = siguiente })</label>
 				<span>|</span>
-				<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+				<label>@Html.ActionLink("Última", "FiltroUsuario", new { pag = numPags - 1 })</label>
 			}
 			else
 			{
